style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
  box-sizing: border-box;
  color: #333;
}

body {
  font-family: 'Indie Flower', cursive;
  width: 100%;
  height: 100vh;

  display: flex;
  align-items: center;
  justify-content: center;
}

.container {
  width: 80%;
  text-align: center;
  border: 1px solid #444;
  border-radius: 10px;
  padding: 3rem;
}

.heading-primary {
  font-size: 6.4rem;
}

.canvas-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.canvas-container p {
  font-size: 5rem;
}

.wrong-char {
  font-size: 3.2rem;
  width: 40rem;
}

.dashes {
  font-size: 8rem;
  letter-spacing: 3rem;
}

